# SEPOLIA2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
OLD/: VectorDenseAuxiliary.hpp  VectorDenseCMATH.hpp  VectorDenseComplex.hpp  VectorDenseConstructors.hpp  VectorDenseDeclaration.hpp  VectorDenseDestructor.hpp  VectorDenseGSL.hpp  VectorDenseGet.hpp  VectorDenseMemory.hpp  VectorDenseOperators.hpp  VectorDenseSet.hpp
algebra_dense/: algebra_blas_level_1.cpp  algebra_blas_level_1.h
notes/: TODO.txt
old/: VectorDense.hpp  VectorDenseAlgebraBasic.hpp  VectorDenseAuxiliary.hpp  VectorDenseBLAS.hpp  VectorDenseCMATH.hpp  VectorDenseComplex.hpp  VectorDenseConstructors.hpp  VectorDenseDeclaration.hpp  VectorDenseDestructor.hpp  VectorDenseGSL.hpp  VectorDenseGeneric.hpp  VectorDenseGet.hpp  VectorDenseMemory.hpp  VectorDenseOperators.hpp  VectorDenseSTL.hpp  VectorDenseSet.hpp
parameters/: errors.h  parameters.h
tests/algebra_dense/003_test_unit/: 001_compile_intel.sh  002_compile_gnu.sh  0xx_clean.sh  driver_program.cpp  unit_test_blas.cpp
tests/vector_dense/001_test_program/: 001_compile_intel.sh  002_compile_gnu.sh  003_compile_intel_par.sh  driver_program.cpp
tests/vector_dense/002_test_speed/: 001_compile_intel.sh  002_compile_gnu.sh  003_compile_intel_par.sh  (+7 more)
utilities/: exceptions.h  functions.h  utils.h
vector_dense/: vector_dence_constructors.h  vector_dense.h  vector_dense_algebra.h  vector_dense_aux.h  vector_dense_declaration.h  vector_dense_get.h  vector_dense_memory.h  vector_dense_operators.h  vector_dense_set.h  vector_dense_stl_members.h
(+46 files in other folders)
